--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="description" content="A highly scalable vue boilerplate using vite">
-    <title>Vite App</title>
+    <title>Funny Movies</title>
     <!-- <meta name="naive-ui-style" /> -->
   </head>
   <body>
